# tg-stickers-ascii-art

./: LICENSE  README.md  example.py  requirements.txt  setup.cfg
doc/: sticker.txt
tg-stickers-ascii-art/: __init__.py
tgsart/: __init__.py
