[metadata]
name = tgsart-mishimastar
version = 0.1.0
description = Making Telegram Stickers as ASCII Art representation
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergey Saltykov
author_email = mishimastar3000@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/mishimastar/tg-stickers-ascii-art
project_urls =
    Documentation = https://github.com/mishimastar/tg-stickers-ascii-art
    Bug Tracker = https://github.com/mishimastar/tg-stickers-ascii-art/issues
keywords = telegram, stickers, ascii, art, webp
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = ~=3.7

[options.extras_require]
dev =
    numpy~=1.22.0
    Pillow~=8.4.0
    webp~=0.1.4